Updated python pulll scripts.

--- a/2_rsdata/src/6_toa_reflectance_pull.Rmd
+++ b/2_rsdata/src/6_toa_reflectance_pull.Rmd
@@ -9,19 +9,79 @@ editor_options:
 library(tidyverse)
 library(feather)
 library(knitr)
+library(purrr)
+library(reticulate)
+library(googledrive)
 opts_knit$set(root.dir='../..')
 
+```
+```{r}
+
+repl_python()
+import os
+toapy = r.toa_existing
+#Identify upload and download directories.
+
+DLdir = '2_rsdata_out/toa_matchups/'
+
+ULdir = '2_rsdata/out/SplitWide/'
+
+#Generate file lists for both
+filesDown = r.toa_existing['name']
+filesUp = os.listdir(ULdir) 
+
+#Remove hidden formatting file in directory and any file names in filesUp that are already in files down.
+filesUp  = filter(lambda x: x  != '.DS_Store', filesUp)
+filesDown = [i.replace(".csv", ".feather") for i in filesDown]
+
+filesUpFlt = [x for x in filesUp if x not in filesDown]
+      
+      import ee
+print 'hello world'
+exit
 ```
 
 This script takes the shouldered, filtered in situ water quality dataset pulled from the Water Quality Portal/LAGOS and extracts associated top of atmosphere reflectance values from Google Earth Engine.  The pulled reflectance values are the median pixel value of pixels with 80% water occurence (according to Pekel) within 120m of the provided lat/long of the in situ sample identified in the water quality dataset.
 
+## The engine path identified with an authorized google earth engine account may need updating from one individual computer to another.
 
-```{python, eval=F, engine.path="/anaconda/bin/python2"}
+
+```{r}
+
+###Download the split wqp/lagos data to send up to GGE.  This is easier in R than python. Also create a list of existing reflectance csv's to filter what's sent up.
+
+library(googledrive)
+splits <- drive_ls('watersat/2_rsdata/out/SplitWide/')
+
+
+if(length(list.files('2_rsdata/out/SplitWide')) < 546){
+  for(i in 1:nrow(splits)) {
+    path = paste0(getwd(),'/2_rsdata/out/SplitWide/', x$name[i])
+    drive_download(as_id(splits$id[i]),
+                   path=path, overwrite = TRUE)
+  }
+}
+
+filesDownR <- drive_ls("watersat/2_rsdata/out/toa_matchups/") %>% 
+  select(name)
+
+```
+
+
+
+```{r}
+
+##repl_python basically starts a python bash window within your R chunk.  This can be used to actually interact with earth engine.
+repl_python()
 import time
 import ee
 import os
-import feather as f
+import feather
+execfile('2_rsdata/src/5a_6a_GEE_pull_functions.py')
+
 ee.Initialize()
+
+#Source necessary functions.
 
 #Load in Pekel water occurance Layer and Landsat Collections.
 
@@ -30,7 +90,10 @@ pekel = ee.Image('JRC/GSW1_0/GlobalSurfaceWater')
 l8 = ee.ImageCollection('LANDSAT/LC08/C01/T1_TOA')
 l7 = ee.ImageCollection('LANDSAT/LE07/C01/T1_TOA')
 l5 = ee.ImageCollection('LANDSAT/LT05/C01/T1_TOA').map(addPan)
-  
+
+#Identify toa for use in sourced functions.
+
+collection = 'TOA'
 
 #Standardize band names between the various collections and aggregate 
 #them into one image collection
@@ -55,20 +118,12 @@ water = water.updateMask(water)
 ## Set buffer distance of pixels to include in median calculation.  Distance is in meters from supplied sample point.  
 dist = 120
 
-
 ## Identify folder with in-situ data broken up into 5000 observation chunks by path/row and
-#Remove Path/Row combo files that have already been sent up
-
-#Identify upload and download directories, eventually change this to to use PyDrive package which directly accesses google drive so it can be applicable between users.
-if sat == 'SR':
-  DLdir = "/Users/simontopp/Google Drive/WQP_SR_MatchUps/"
-else:
-  DLdir = "/Users/simontopp/Google Drive/WQP_TOA_MatchUps/"
-
 ULdir = '2_rsdata/out/SplitWide/'
 
-#Generate file lists for both
-filesDown = os.listdir(DLdir)
+
+#Generate file lists for both files to be sent and files already processed in google earth engine
+filesDown = r.filesDownR['name']
 filesUp = os.listdir(ULdir) 
 
 #Remove hidden formatting file in directory and any file names in filesUp that are already in files down.
@@ -77,148 +132,10 @@ filesDown = [i.replace(".csv", ".feather") for i in filesDown]
 
 filesUpFlt = [x for x in filesUp if x not in filesDown]
 
-### Functions
-
-####  This function maps across all the sites in a given Path/Row file
-
-def sitePull(i):
-
-  #Pull the overpass date associated with the sample (+/- 1 day)
-  date = ee.Date(i.get('Date'))
-    
-  #Create a buffer around the sample site. Size is determined above.
-  sdist = i.geometry().buffer(dist)
-    
-  #Filter the landsat scenes associated with the path/row to the sample date
-  #and clip it to the site buffer
-  lsSample = ee.Image(lsover.filterDate(date,date.advance(1,'day')).first()).clip(sdist)
-
-  #Create a mask that removes pixels identifed as cloud or cloud 
-  #shadow with the pixel qa band
-  if sat == 'SR':
-    mission = ee.String(lsSample.get('SATELLITE')).split('_').get(1)
-  else:
-    mission = ee.String(lsSample.get('SPACECRAFT_ID')).split('_').get(1)
-  
-  ###These are functions for unpacking the bit quality assessment band for TOA  
-  def Unpack(bitBand, startingBit, bitWidth):
-   # unpacking bit bands
-   # see: https://groups.google.com/forum/#!starred/google-earth-engine-developers/iSV4LwzIW7A
-   return (ee.Image(bitBand)
-           .rightShift(startingBit)
-           .bitwiseAnd(ee.Number(2).pow(ee.Number(bitWidth)).subtract(ee.Number(1)).int()))
-  if mission == 8:
-    bitAffected = {
-      'Cloud': [4, 1],
-      'CirrusConfidence': [11,2],
-    # 'CloudConfidence': [5, 2],
-      'CloudShadowConfidence': [7, 2],
-      'SnowIceConfidence': [9, 2]
-    }
-  else:
-    bitAffected = {
-    'Cloud': [4, 1],
-    #'CloudConfidence': [5, 2],
-    'CloudShadowConfidence': [7, 2],
-    'SnowIceConfidence': [9, 2]
-    }
-    
-  def UnpackAll(bitBand, bitInfo):
-     unpackedImage = ee.Image.cat([Unpack(bitBand, bitInfo[key][0], bitInfo[key][1]).rename([key]) for key in bitInfo])
-     return unpackedImage
-  
-  ## Burn in roads that might not show up in Pekel and potentially 
-  #corrupt pixel values  
-  road = ee.FeatureCollection("TIGER/2016/Roads").filterBounds(sdist)\
-  .geometry().buffer(30) 
-  
-  ##Cloud/Shadow masking info for SR collections 
-  cloudShadowBitMask = ee.Number(2).pow(3).int()
-  cloudsBitMask = ee.Number(2).pow(5).int()
-  snowBitMask = ee.Number(2).pow(4).int()
-  qa = lsSample.select('fmask')
-    
-  #Create road, cloud, and shadow mask. TOA and SR require different functions.
-  if sat == "SR":
-    mask = qa.bitwiseAnd(cloudShadowBitMask).eq(0)\
-    .And(qa.bitwiseAnd(cloudsBitMask).eq(0))\
-    .And(qa.bitwiseAnd(snowBitMask).eq(0))\
-    .paint(road,0)
-
-  else:
-    qaUnpack = UnpackAll(qa, bitAffected)
-    if mission == 8:
-      mask = qaUnpack.select('Cloud').eq(1)\
-      .Or(qaUnpack.select('CloudShadowConfidence').eq(3))\
-      .Or(qaUnpack.select('SnowIceConfidence').eq(3))\
-      .Or(qaUnpack.select('CirrusConfidence').eq(3))\
-      .paint(road,1).Not()
-    else:
-      mask = qaUnpack.select('Cloud').eq(1)\
-        .Or(qaUnpack.select('CloudShadowConfidence').eq(3))\
-        .Or(qaUnpack.select('SnowIceConfidence').eq(3))\
-        .paint(road,1).Not()
- 
-  #Create water only mask
-  wateronly = water.clip(sdist)
-    
-  #Update mask on imagery and add Pekel occurrence band for data export.
-  lsSample = lsSample.addBands(pekel.select('occurrence'))\
-  .updateMask(wateronly).updateMask(mask)
-    
-  #Collect mean reflectance and occurance values
-  lsout = lsSample.reduceRegion(ee.Reducer.median(), sdist, 30)
-    
-  #Create dictionaries of median values and attach them to original site feature.
-    
-  output = i.set({'sat': mission})\
-  .set({"Blue": lsout.get('Blue')})\
-  .set({"Green": lsout.get('Green')})\
-  .set({"Red": lsout.get('Red')})\
-  .set({"Nir": lsout.get('Nir')})\
-  .set({"Swir1": lsout.get('Swir1')})\
-  .set({"Swir2": lsout.get('Swir2')})\
-  .set({"fmask": lsout.get('fmask')})\
-  .set({"pwater": lsout.get('occurrence')})\
-  .set({"pixelCount": lsSample.reduceRegion(ee.Reducer.count(), sdist, 30).get('Blue')})\
-  .set({'PATH': lsSample.get('WRS_PATH')})\
-  .set({'ROW': lsSample.get('WRS_ROW')})
-  
-  if sat == 'TOA':
-    output = output.set({"Pan": lsout.get('Pan')})
-    
-  return output
-
-##Function for limiting the max number of tasks sent to
-#earth engine at one time to avoid time out errors
-
-def maximum_no_of_tasks(MaxNActive, waitingPeriod):
-  """maintain a maximum number of active tasks
-  """
-  time.sleep(10)
-  ## initialize submitting jobs
-  ts = list(ee.batch.Task.list())
-
-  NActive = 0
-  for task in ts:
-       if ('RUNNING' in str(task) or 'READY' in str(task)):
-           NActive += 1
-  ## wait if the number of current active tasks reach the maximum number
-  ## defined in MaxNActive
-  while (NActive >= MaxNActive):
-      time.sleep(waitingPeriod) # if reach or over maximum no. of active tasks, wait for 2min and check again
-      ts = list(ee.batch.Task.list())
-      NActive = 0
-      for task in ts:
-        if ('RUNNING' in str(task) or 'READY' in str(task)):
-          NActive += 1
-  return()
-    
-
 
 #### Wrap it all up in a for loop running through our list of files
 
-for x in range(0,len(filesUpFlt)):
+for x in range(0,3):#len(filesUpFlt)):
 
   #Read in our file as a feather data frame
   inv = f.read_dataframe(ULdir + filesUpFlt[x])
