--- a/2_rsdata/src/2_wqp_overlaps.rmd
+++ b/2_rsdata/src/2_wqp_overlaps.rmd
@@ -7,7 +7,7 @@ output: html_document
 
 # Join WQP inventory data to the landsat wrs tiles. 
 
-In order to avoid sending up extraneous data to the WQP portal, we check for the PATH and ROW of each site that is near landsat-detectable water (from step "1_LandsatSiteInventory.Rmd"). Eventually this data will be joined to the actuall concentration data in 3_Flat_Overpasses.Rmd
+In order to avoid sending up extraneous data to the WQP portal, we check for the PATH and ROW of each site that is near landsat-detectable water (from step "1_landsat_site_inventory.Rmd"). Eventually this data will be joined to the actuall concentration data in 3_flat_overpasses.Rmd
 
 ```{r setup}
 library(knitr)
@@ -17,13 +17,14 @@ library(tidyverse)
 library(sf)
 library(LAGOSNE)
 
+#Reset working directory to the top level
 opts_knit$set(root.dir='../..')
 ```
 
 ## Load in site data and convert to an sf object
 ```{r}
 #Load in wqp data
-winv <- read_feather('2_rsdata/out/uniqueWaterInventory.feather')
+winv <- read_feather('2_rsdata/out/unique_site_visible_inv.feather')
 
 
 #Convert the data into sf object
@@ -34,13 +35,17 @@ inv.sf <- st_as_sf(winv,coords=c('long','lat'),crs=4326) %>%
 
 
 ```{r}
+
+
 #Read in usa data
 usa = st_as_sf(maps::map('usa',plot=F,fill=T)) %>%
     st_transform(.,2163) %>%
     st_buffer(.,0) 
 
-#Read in wrs data
+#Read in wrs spatial data ##THIS NEEDS TO BE GATHERED AGAIN##
 load('2_rsdata/in/wrs.RData')
+
+
 #Convert to sf object
 wrs <- st_as_sf(wrs) %>%
   st_transform(.,2163)
@@ -75,7 +80,7 @@ inv.wrs.sf <- st_join(inv.sf,wrs.all.usa) %>%
 
 
 
-#Convert tthis to a tibble
+#Convert this to a tibble
 sfc_as_cols <- function(x, names = c("x","y")) {
   stopifnot(inherits(x,"sf") && inherits(sf::st_geometry(x),"sfc_POINT"))
   ret <- do.call(rbind,sf::st_geometry(x))
@@ -84,6 +89,7 @@ sfc_as_cols <- function(x, names = c("x","y")) {
   ret <- setNames(ret,names)
   dplyr::bind_cols(x,ret)
 }
+
 inv.wrs <- sfc_as_cols(inv.wrs.sf,names=c('long','lat')) %>%
   as.tibble() %>%
   dplyr::select(-geometry,-id) 
@@ -100,7 +106,7 @@ inv.wrs.fail <- inv.wrs.sf%>%
 
 #Turns out it is the florida keys and some island I can't recognize. I'm okay with not having these sites
 
-write_feather(inv.wrs,path='2_rsdata/out/WRSWaterInventory.feather')
+write_feather(inv.wrs,path='2_rsdata/out/site_inventory_path_row.feather')
 ```
 
 
