--- a/1_wqdata/src/wqp_data_harmonize_explorer.Rmd
+++ b/1_wqdata/src/wqp_data_harmonize_explorer.Rmd
@@ -50,34 +50,29 @@ So to harmonize secchi depth measurements we simpy drop all units that are not u
 
 
 ```{r secchi}
-
-
-
 #Read in the raw data from '1_wqdata/tmp'
 secchi <- read_feather('1_wqdata/tmp/wqp/all_raw_secchi.feather') %>%
   wqp.renamer() %>%
   #Remove trailing white space in labels
   mutate(units = trimws(units)) 
 
-#Summarize by characteristic name and unit code
-secchi.ct <- secchi %>%
+#Summarize by characteristic name and unit code and print
+secchi %>%
   group_by(parameter,units) %>%
-  summarize(count=n()) 
-
-#Print the table
-secchi.ct %>%
+  summarize(count=n()) %>%
   knitr::kable()
 ```
 
-### Secchi disharmony
+### Secchi discordance
 
 Now that we can see all the units we have we can drop non-depth units and make a lookup table to convert all units to meters. 
 
-The table below shows all the units we dropped and their counts
 ```{r}
+#Create a lookup table of units and conversion factors that we want to keep
 secchi.lookup <- tibble(units=c('cm','ft','in','m','mi'),
                         conversion = c(0.01,.3048,0.0254,1,1609.34))
 
+# Do an anti_join to these units so that all units that aren't kept can be highlighted and displayed
 secchi.disharmony <- secchi %>%
   anti_join(secchi.lookup,by='units') %>%
   group_by(units) %>%
@@ -85,19 +80,21 @@ secchi.disharmony <- secchi %>%
 
 
 secchi.disharmony %>%
-  knitr::kable()
+  knitr::kable(.,caption='The following secchi measurements were dropped because the units do not make sense')
+
+
 ```
 
-### Secchi harmony
 
+
+### Secchi harmony in meters
 
 ```{r}
+#Join secchi by unit name and then multiply by conversion factor to get meters
 secchi.harmonized <- secchi %>%
   inner_join(secchi.lookup,by='units') %>%
   mutate(harmonized_value=value*conversion)
 
-#
-#Export here. 
 ```
 
 
@@ -105,17 +102,50 @@ secchi.harmonized <- secchi %>%
 Next easiest is TSS
 
 ## TSS 
+
 ```{r tss}
 #Read in the raw data from '1_wqdata/tmp'
-tss <- read_feather('1_wqdata/tmp/wqp/all_raw_tss.feather')
+tss <- read_feather('1_wqdata/tmp/wqp/all_raw_tss.feather') %>%
+  wqp.renamer() %>%
+  #Remove trailing white space in labels
+  mutate(units = trimws(units)) 
 
 #Summarize by characteristic name and unit code
 tss %>%
-  group_by(CharacteristicName,ResultMeasure.MeasureUnitCode) %>%
+  group_by(parameter,units) %>%
   summarize(count=n()) %>%
   knitr::kable()
 
+
 ```
+
+### TSS discordance
+
+This [paper](https://water.usgs.gov/osw/pubs/WRIR00-4191.pdf) is really useful for exploring this data. In this paper, the USGS directly compares estimates of Suspended Sediment Concentration (SSC) and Total Suspended Solids (TSS). The primary difference between these methods, as laid out in this paper, is that SSC estimates the weight of suspended solids in a sample volume, by drying out the entire sample without subsampling the water volume. TSS methods often involve some form of subsampling of the total water volume. The paper highlights that while many estimates of TSS and SSC are essentially the same, samples with high sand content show systematic bias in TSS estimates. For our purposes, we have no apriori way to distinguish samples with high or low sand, so we have made the choice to assume that measurements of SSC and TSS are, over the bulk of samples, the same. 
+
+As with secchi disk depth, we expect certain units to be associated with total suspended solids or suspended sediment concentration. These include weight per volume measurements like: mg/l, g/l, ug/l and others. 
+
+TSS does come with one less obvious parameter which is %. This reasonably could be percent of sample weight that is sediment where the original units would have been in something like 'sediment in g'/'water weight in g'. Assuming samples are mostly freshwater we can convert these back to units of mg/L, but this is a series of assumptions that we should check by looking at the data itself.
+
+#### TSS exploring % values
+
+
+```{r, fig.width=5}
+tss.p <- tss %>%
+  filter(units == '%') %>% 
+  filter(value < 150)
+
+ggplot(tss.p,aes(x=value)) + 
+  geom_histogram() + 
+  facet_wrap(~parameter,scales='free_y',ncol=1)
+
+mar.tss <- read_feather('1_wqdata/out/wqp/Mississippi_tss_001.feather') %>%
+  filter(ResultMeasure.MeasureUnitCode == '%')
+
+View(mar.tss)
+
+```
+
 
 Getting harder
 
